--- a/src/rentalMobil/view/ViewFormPengembalian.form
+++ b/src/rentalMobil/view/ViewFormPengembalian.form
@@ -183,10 +183,10 @@
                   <EmptySpace type="separate" max="-2" attributes="0"/>
                   <Group type="103" groupAlignment="0" max="-2" attributes="0">
                       <Component id="jLabel6" alignment="0" pref="34" max="32767" attributes="0"/>
-                      <Group type="103" alignment="0" groupAlignment="3" attributes="0">
+                      <Component id="jLabel10" alignment="0" max="32767" attributes="0"/>
+                      <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="denda" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
                           <Component id="bayar" alignment="3" min="-2" pref="30" max="-2" attributes="0"/>
-                          <Component id="jLabel10" alignment="0" max="32767" attributes="0"/>
                       </Group>
                       <Component id="harga" alignment="0" max="32767" attributes="0"/>
                   </Group>
@@ -372,9 +372,6 @@
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="c0" green="ef" red="e9" type="rgb"/>
             </Property>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="c0" green="ef" red="e9" type="rgb"/>
-            </Property>
           </Properties>
           <Events>
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="no_polActionPerformed"/>
@@ -390,9 +387,6 @@
         <Component class="javax.swing.JTextField" name="harga">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
-              <Color blue="c0" green="ef" red="e9" type="rgb"/>
-            </Property>
-            <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="c0" green="ef" red="e9" type="rgb"/>
             </Property>
           </Properties>
