--- a/src/rentalMobil/view/ViewFormPengembalian.form
+++ b/src/rentalMobil/view/ViewFormPengembalian.form
@@ -512,7 +512,7 @@
             <Property name="text" type="java.lang.String" value="Hari"/>
           </Properties>
         </Component>
-        <Component class="javax.swing.JTextField" name="id_transaksi">
+        <Component class="javax.swing.JTextField" name="id_transaksi1">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="c0" green="ef" red="e9" type="rgb"/>
@@ -522,7 +522,7 @@
             <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="id_transaksiActionPerformed"/>
           </Events>
         </Component>
-        <Component class="javax.swing.JTextField" name="harga">
+        <Component class="javax.swing.JTextField" name="harga1">
           <Properties>
             <Property name="background" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
               <Color blue="c0" green="ef" red="e9" type="rgb"/>
